--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,13 +13,15 @@ build:
   number: 1
   string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}
   detect_binary_files_with_prefix: False
+  script_env:
+    - OPEN_CE_CUDA_HOME  
 
 requirements:
   build:
     - {{ compiler('cxx') }}
+    - {{ compiler("cuda") }}     # [build_type == 'cuda']
 
   host: 
-    - cudatoolkit-dev {{ cudatoolkit }} # [build_type == 'cuda']
     - future {{ future }}
     - python {{ python }}
     - _pytorch_select  {{ pytorch_select_version }}
