--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
     - 0102-Fixed-failure-on-baremetal.patch
 
 build:
-  number: 1
+  number: 2
   string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}
   detect_binary_files_with_prefix: False
   script_env:
@@ -31,6 +31,8 @@ requirements:
     - setuptools {{ setuptools }}
     - ffmpeg {{ ffmpeg }}
     - av {{ av }}
+    - libpng {{ libpng }}
+    - jpeg {{ jpeg }}
 
   run:
     - cudatoolkit {{ cudatoolkit }}     # [build_type == 'cuda']
@@ -43,6 +45,8 @@ requirements:
     - six {{ six }}
     - ffmpeg                            # versioning handled by run_exports
     - av                                # versioning handled by run_exports
+    - libpng {{ libpng }}
+    - jpeg {{ jpeg }}
 
 about:
   home: http://pytorch.org/
