--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,8 @@ source:
 
 build:
   number: 4
-  string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}
+  string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}   #[build_type == 'cpu']
+  string: {{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} #[build_type == 'cuda']
   detect_binary_files_with_prefix: False
   script_env:
     - CUDA_HOME
