--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,8 +13,9 @@ source:
     - 0102-Fixed-failure-on-baremetal.patch
 
 build:
-  number: 4
-  string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}
+  number: 5
+  string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}   #[build_type == 'cpu']
+  string: {{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} #[build_type == 'cuda']
   detect_binary_files_with_prefix: False
   script_env:
     - CUDA_HOME
