--- a/variants/meta.yaml
+++ b/variants/meta.yaml
@@ -9,12 +9,17 @@ package:
 outputs:
     - name: torchvision{{ '-cpu' if build_type == 'cpu' else '' }}
       build:
-          number: 1
+          number: 2
+          string: py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}   #[build_type == 'cpu']
+          string: {{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} #[build_type == 'cuda']
+
       requirements:
           run:
              - pytorch-base {{ pytorch }}
              - _pytorch_select {{ pytorch_select_version }}
              - torchvision-base {{ torchvision }}
+             - python {{ python }}
+             - cudatoolkit {{ cudatoolkit }} #[build_type == 'cuda']
 
 about:
   summary: Meta-package to install {{ 'GPU-enabled' if build_type == 'cuda' else 'CPU-only' }} torchvision variant
