--- a/variants/meta.yaml
+++ b/variants/meta.yaml
@@ -9,7 +9,7 @@ package:
 outputs:
     - name: torchvision{{ '-cpu' if build_type == 'cpu' else '' }}
       build:
-          number: 2
+          number: 3
           string: py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}   #[build_type == 'cpu']
           string: {{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} #[build_type == 'cuda']
 
@@ -22,7 +22,13 @@ outputs:
              - cudatoolkit {{ cudatoolkit }} #[build_type == 'cuda']
 
 about:
+  home: http://pytorch.org/
+  license: BSD 3-Clause
+  license_family: BSD
   summary: Meta-package to install {{ 'GPU-enabled' if build_type == 'cuda' else 'CPU-only' }} torchvision variant
+  description: Meta-package to install {{ 'GPU-enabled' if build_type == 'cuda' else 'CPU-only' }} torchvision variant
+  dev_url: https://github.com/pytorch/vision
+  doc_url: https://pytorch.org/docs/stable/torchvision/index.html
 
 extra:
   recipe-maintainers:
