--- a/tests/open-ce-tests.yaml
+++ b/tests/open-ce-tests.yaml
@@ -3,6 +3,8 @@ tests:
     command: |
         conda install -y git
         git clone -b v$(python -c "import torchvision; print(torchvision.__version__)") https://github.com/pytorch/vision.git
+        cd vision
+        rm -rf torchvision
         conda install -y pytest mock
   - name: Run TorchVision tests
     command: |
