--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,9 @@ requirements:
   build:
     - {{ compiler('cxx') }}
     - patch
-
+    # Use pins to control cos6/cos7 match
+    - libgcc-ng  {{ libgcc }}
+    - libstdcxx-ng  {{ libstdcxx }}
   host: 
     - future {{ future }}
     - python {{ python }}
@@ -36,6 +38,9 @@ requirements:
     - av {{ av }}
     - libpng {{ libpng }}
     - jpeg {{ jpeg }}
+    # Use pins to control cos6/cos7 match
+    - libgcc-ng  {{ libgcc }}
+    - libstdcxx-ng  {{ libstdcxx }}
 
   run:
     - cudatoolkit {{ cudatoolkit }}     # [build_type == 'cuda']
