--- a/tests/open-ce-tests.yaml
+++ b/tests/open-ce-tests.yaml
@@ -9,6 +9,6 @@ tests:
   - name: Run TorchVision tests
     command: |
         cd vision
-        pytest -v -k "not test_url_is_accessible and not test_backward_cuda_contiguous and not test_backward_cuda_non_contiguous and not test_linear_transformation and not test_random_affine" test/
+         python -m pytest -v -k "not test_fasterrcnn_double and not test_detection_model and not test_qroialign and not test_random_rotate and not test_masks_box" test/
   - name: Clean tests
     command: rm -rf vision
