build vision v0.11 for CUDA 11.2

--- a/config/build-config.yaml
+++ b/config/build-config.yaml
@@ -1,6 +1,14 @@
 recipes:
+{% if build_type == 'cuda' and cudatoolkit == '11.2' %}
   - name : torchvision-base
-    path : recipe
+    path : vision-0.11/recipe
 
   - name : torchvision-meta
-    path : variants
+    path : vision-0.11/variants
+{% else %}
+  - name : torchvision-base
+    path : vision-0.12/recipe
+
+  - name : torchvision-meta
+    path : vision-0.12/variants
+{% endif %}
