do not use Anaconda GCC for P10

--- a/vision-0.13/recipe/meta.yaml
+++ b/vision-0.13/recipe/meta.yaml
@@ -23,7 +23,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('cxx') }}
+    - {{ compiler('cxx') }}             #[ppc_arch != "p10"]
     - patch
   host: 
     - future {{ future }}
