--- a/vision-0.13/recipe/meta.yaml
+++ b/vision-0.13/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 #    - 0103-pick-up-ancaconda-gcc.patch
 
 build:
-  number: 1
+  number: 2
   string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }}   #[build_type == 'cpu']
   string: {{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} #[build_type == 'cuda']
   detect_binary_files_with_prefix: False
@@ -23,7 +23,7 @@ build:
 
 requirements:
   build:
-    - {{ compiler('cxx') }}
+    - {{ compiler('cxx') }}             #[ppc_arch != "p10"]
     - patch
   host: 
     - future {{ future }}
