--- a/vision-0.14/recipe/meta.yaml
+++ b/vision-0.14/recipe/meta.yaml
@@ -1,13 +1,15 @@
-{% set version = "0.13.1" %}
+{% set version = "0.14.0" %}
 
 package:
   name: torchvision-base
   version: {{ version }}
 
 source:
-  fn: torchvision-{{ version }}.tar.gz
-  url: https://github.com/pytorch/vision/archive/v{{ version }}.tar.gz
-  sha256: c32fab734e62c7744dadeb82f7510ff58cc3bca1189d17b16aa99b08afc42249
+#  fn: torchvision-{{ version }}-rc2.tar.gz
+#  url: https://github.com/pytorch/vision/archive/v{{ version }}-rc2.tar.gz
+#  sha256: c32fab734e62c7744dadeb82f7510ff58cc3bca1189d17b16aa99b08afc42249
+  git_url: https://github.com/pytorch/vision.git
+  git_rev: v{{ version }}-rc2
   patches:
     - 0101-find-ffmpeg-in-conda-env.patch
     - 0102-Fixed-failure-on-baremetal.patch
