--- a/vision-0.14/recipe/meta.yaml
+++ b/vision-0.14/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
 
 source:
   git_url: https://github.com/pytorch/vision.git
-  git_rev: v{{ version }}-rc2
+  git_rev: v{{ version }}
   patches:
     - 0101-find-ffmpeg-in-conda-env.patch
     - 0102-Fixed-failure-on-baremetal.patch
